Apply translation memory

--- a/l10n/po/ja_JP/_versions/2.2/guides/capabilities.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.2/guides/capabilities.adoc.po
@@ -23,7 +23,7 @@ msgstr ""
 #: upstream/_versions/2.2/guides/capabilities.adoc:6
 #, no-wrap
 msgid "Extension Capabilities"
-msgstr ""
+msgstr "エクステンションケイパビリティ"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/capabilities.adoc:11
