--- a/l10n/po/ja_JP/_versions/2.2/guides/context-propagation.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.2/guides/context-propagation.adoc.po
@@ -65,7 +65,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #. type: Plain text
 #: upstream/_versions/2.2/guides/context-propagation.adoc:34
 msgid "The solution is located in the `context-propagation-quickstart` {quickstarts-tree-url}/context-propagation-quickstart[directory]."
-msgstr ""
+msgstr "このソリューションは `context-propagation-quickstart` {quickstarts-tree-url}/context-propagation-quickstart[directory]にあります。"
 
 #. type: Title ==
 #: upstream/_versions/2.2/guides/context-propagation.adoc:35
@@ -125,7 +125,7 @@ msgstr "Mutiny"
 #. type: delimited block =
 #: upstream/_versions/2.2/guides/context-propagation.adoc:71
 msgid "This section uses Mutiny reactive types.  If you are not familiar with Mutiny, check xref:mutiny-primer.adoc[Mutiny - an intuitive reactive programming library]."
-msgstr ""
+msgstr "このセクションでは、Mutinyのリアクティブ型を使用しています。もしMutinyに慣れていない場合は、まず xref:mutiny-primer.adoc[Mutiny - 直感的なリアクティブプログラミングライブラリ] を参照してください。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/context-propagation.adoc:76
