--- a/l10n/po/ja_JP/_versions/main/guides/building-native-image.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/building-native-image.adoc.po
@@ -97,7 +97,7 @@ msgstr "xref:configuring-c-development[動作するC言語の開発環境]"
 #. type: Plain text
 #: upstream/_versions/main/guides/building-native-image.adoc:58
 msgid "The code of the application developed in the xref:getting-started.adoc[Getting Started Guide]."
-msgstr ""
+msgstr "link:getting-started.html[入門ガイド]で開発したアプリケーションのコード"
 
 #. type: Block title
 #: upstream/_versions/main/guides/building-native-image.adoc:59
