--- a/l10n/po/ja_JP/_versions/main/guides/hibernate-orm-panache-kotlin.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/hibernate-orm-panache-kotlin.adoc.po
@@ -158,7 +158,7 @@ msgstr ""
 #: upstream/_versions/main/guides/hibernate-orm-panache-kotlin.adoc:94
 #: upstream/_versions/main/guides/hibernate-orm-panache-kotlin.adoc:102
 msgid "Note the addition of `-kotlin` on the end. Generally you'll only need this version but if your project will be using both Java and Kotlin code, you can safely include both artifacts."
-msgstr ""
+msgstr "最後に `-kotlin` が追加されていることに注意してください。通常はこのバージョンのみが必要ですが、プロジェクトでJavaとKotlinの両方のコードを使用する場合は、両方のアーティファクト含めても大丈夫です。"
 
 #. type: Block title
 #: upstream/_versions/main/guides/hibernate-orm-panache-kotlin.adoc:96
