--- a/l10n/po/ja_JP/_versions/main/guides/native-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/native-reference.adoc.po
@@ -28,28 +28,28 @@ msgstr "ネイティブリファレンスガイド"
 #. type: Plain text
 #: upstream/_versions/main/guides/native-reference.adoc:14
 msgid "This guide is a companion to the xref:building-native-image.adoc[Building a Native Executable], xref:native-and-ssl.adoc[Using SSL With Native Images], and xref:writing-native-applications-tips.adoc[Writing Native Applications], guides.  It provides further details to debugging issues in Quarkus native executables that might arise during development or production."
-msgstr ""
+msgstr "このガイドは、 link:building-native-image.html[ネイティブ実行可能ファイルのビルド]、 link:native-and-ssl.html[Using SSL With Native Images[ネイティブイメージでのSSLの使用]、 link:writing-native-applications-tips.html[ネイティブアプリケーションの作成]の各ガイドに付随するものです。このガイドでは、開発時や本番時に発生する可能性のあるQuarkusのネイティブ実行可能ファイルの問題をデバッグするための詳細を説明しています。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/native-reference.adoc:16
 msgid "This reference guide takes as input the application developed in the xref:getting-started.adoc[Getting Started Guide]."
-msgstr ""
+msgstr "このリファレンスガイドは、 link:getting-started.html[入門ガイド]で開発されたアプリケーションを入力としています。"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/native-reference.adoc:17
 #, no-wrap
 msgid "Requirements and Assumptions"
-msgstr ""
+msgstr "要件と前提条件"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/native-reference.adoc:23
 msgid "Debugging Quarkus native executables experience is best done within a Linux environment.  Root access is not needed except to install packages required to run some debug steps, or to enable `perf` to gather events at the kernel.  Debugging in macOS and Windows environments also works in a container environment (see <<macwindows,FAQ entry>>)."
-msgstr ""
+msgstr "Quarkusのネイティブ実行可能ファイルのデバッグは、Linux環境で行うのが最適です。一部のデバッグ手順を実行するために必要なパッケージをインストールする場合や、 `perf` でカーネルのイベントを収集できるようにする場合を除き、ルートアクセスは必要ありません。macOSやWindows環境でのデバッグは、コンテナ環境でも機能します（ link:#macwindows[FAQエントリ]を参照）。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/native-reference.adoc:25
 msgid "These are the packages you'll need on your Linux environment to run through the different debugging sections:"
-msgstr ""
+msgstr "これらのパッケージは、異なるデバッグセクションを実行するために、Linux環境で必要となるものです。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/native-reference.adoc:32
@@ -64,7 +64,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/native-reference.adoc:35
 msgid "Aside from system level packages, you'll need:"
-msgstr ""
+msgstr "システムレベルのパッケージの他に、以下が必要です:"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/native-reference.adoc:37
@@ -84,23 +84,23 @@ msgstr "動作するコンテナーランタイム(Docker, podman)"
 #. type: Plain text
 #: upstream/_versions/main/guides/native-reference.adoc:40
 msgid "The code of the application developed in the xref:getting-started.adoc[Getting Started Guide]."
-msgstr ""
+msgstr "link:getting-started.html[入門ガイド]で開発したアプリケーションのコード"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/native-reference.adoc:43
 msgid "Finally, this guide assumes the use of the Mandrel distribution of GraalVM for building native executables, and these are built within a container."
-msgstr ""
+msgstr "最後に、このガイドでは、ネイティブ実行可能ファイルをビルドするために、GraalVMのMandrelディストリビューションの使用を想定しており、これらはコンテナ内でビルドされます。"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/native-reference.adoc:44
 #, no-wrap
 msgid "First Debugging Steps"
-msgstr ""
+msgstr "最初のデバッグ手順"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/native-reference.adoc:47
 msgid "As a first step, build the native executable for the application:"
-msgstr ""
+msgstr "まず最初のステップとして、アプリケーションのネイティブ実行可能ファイルをビルドします。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/native-reference.adoc:52
@@ -114,7 +114,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/native-reference.adoc:55
 msgid "Run the application to verify it works as expected. In one terminal:"
-msgstr ""
+msgstr "アプリケーションを実行して、期待通りに動作することを確認します。一つの端末で以下を実行します。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/native-reference.adoc:59
@@ -126,7 +126,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/native-reference.adoc:62
 msgid "In another:"
-msgstr ""
+msgstr "別のターミナルで以下を実行します。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/native-reference.adoc:66
@@ -137,7 +137,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/native-reference.adoc:69
 msgid "We can obtain basic extra information while building the native executable by adding additional native-image build options using `-Dquarkus.native.additional-build-args`, e.g."
-msgstr ""
+msgstr "ネイティブ実行可能ファイルをビルドする際に `-Dquarkus.native.additional-build-args` というネイティブイメージのビルドオプションを追加することで、基本的な追加情報を得ることができます。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/native-reference.adoc:75
@@ -151,7 +151,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/native-reference.adoc:78
 msgid "Executing that will produce additional output lines like this:"
-msgstr ""
+msgstr "これを実行すると、次のような追加の出力行が得られます。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/native-reference.adoc:85
@@ -1146,7 +1146,7 @@ msgstr ""
 #: upstream/_versions/main/guides/native-reference.adoc:729
 #, no-wrap
 msgid "Multi-Thread"
-msgstr ""
+msgstr "マルチスレッド"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/native-reference.adoc:734
@@ -1752,12 +1752,12 @@ msgstr ""
 #: upstream/_versions/main/guides/native-reference.adoc:1157
 #, no-wrap
 msgid "How do I enable GC logging in native executables?"
-msgstr ""
+msgstr "ネイティブ実行可能ファイルでGCロギングを有効にするにはどうすればいいですか？"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/native-reference.adoc:1161
 msgid "Executing the native executable with `-XX:PrintFlags=` prints a list of flags that can be passed to native executables.  For various levels of GC logging one may use:"
-msgstr ""
+msgstr "ネイティブ実行可能ファイルに `-XX:PrintFlags=` を付けて実行すると、ネイティブ実行可能ファイルに渡すことのできるフラグのリストが表示されます。様々なレベルのGCロギングのために、次のように使用することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/native-reference.adoc:1174
@@ -1779,23 +1779,23 @@ msgstr ""
 #: upstream/_versions/main/guides/native-reference.adoc:1176
 #, no-wrap
 msgid "Can I get a heap dump of a native executable? e.g. if it runs out of memory"
-msgstr ""
+msgstr "ネイティブ実行可能ファイルのヒープダンプを取得することはできますか？ 例えば、メモリ不足になった場合などです。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/native-reference.adoc:1183
 msgid "Unfortunately generating heap dumps in hprof format, which can be opened by tools such as VisualVM or Eclipse MAT, can only be achieved with https://www.graalvm.org/reference-manual/native-image/NativeImageHeapdump[GraalVM Enterprise Edition].  Mandrel, which is based on the GraalVM Community Edition, does not have this capability."
-msgstr ""
+msgstr "残念ながら、VisualVMやEclipse MATなどのツールで開くことができるhprof形式のヒープダンプを生成することは、 link:https://www.graalvm.org/reference-manual/native-image/NativeImageHeapdump[GraalVM Enterprise Edition]でしか実現できません。GraalVM Community EditionをベースにしたMandrelには、この機能はありません。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/native-reference.adoc:1187
 msgid "Although Mandrel can generate debug symbols and these contain a fair amount of information about object layouts, including what is a pointer field vs a primitive field, this information cannot be used as is to detect memory leaks or find dominator objects.  This is because it has no idea what constitutes a root pointer nor how to recursively trace pointers from those roots."
-msgstr ""
+msgstr "Mandrelはデバッグシンボルを生成することができ、その中にはポインターフィールドとプリミティブフィールドの違いなど、オブジェクトのレイアウトに関するかなりの情報が含まれていますが、この情報をそのままメモリリークの検出や支配的なオブジェクトの発見に使用することはできません。これは、何がルートポインタを構成するのか、また、それらのルートから再帰的にポインタをトレースする方法がわからないからです。"
 
 #. type: Title ===
 #: upstream/_versions/main/guides/native-reference.adoc:1189
 #, no-wrap
 msgid "Can I follow these examples if I’m running macOS or Windows?"
-msgstr ""
+msgstr "macOSやWindowsを使用していても、これらの例をなぞることはできますか？"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/native-reference.adoc:1195
@@ -2022,27 +2022,27 @@ msgstr ""
 #: upstream/_versions/main/guides/native-reference.adoc:1350
 #, no-wrap
 msgid "Can I use JFR/JMC to debug or profile native binaries?"
-msgstr ""
+msgstr "JFR/JMCを使って、ネイティブバイナリのデバッグやプロファイリングはできますか？"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/native-reference.adoc:1358
 msgid "https://docs.oracle.com/javacomponents/jmc-5-4/jfr-runtime-guide/about.htm#JFRUH170[Java Flight Recorder (JFR)] and https://www.oracle.com/java/technologies/jdk-mission-control.html[JDK Mission Control (JMC)] can be used to debug profile native binaries since GraalVM CE 21.2.0.  However, JFR in GraalVM is currently significantly limited in capabilities compared to HotSpot.  The custom event API is fully supported, but many VM level features are unavailable.  They will be added in future releases. Current limitations are:"
-msgstr ""
+msgstr "link:https://docs.oracle.com/javacomponents/jmc-5-4/jfr-runtime-guide/about.htm#JFRUH170[Java Flight Recorder(JFR)]と link:https://www.oracle.com/java/technologies/jdk-mission-control.html[JDK Mission Control(JMC)]は、GraalVM CE 21.2.0以降、プロファイル・ネイティブ・バイナリのデバッグに使用することができます。 しかし、GraalVMのJFRは現在、HotSpotと比較して機能が大幅に制限されています。カスタムイベントAPIは完全にサポートされていますが、多くのVMレベルの機能は利用できません。これらは将来のリリースで追加される予定です。現在の制限事項は以下の通りです。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/native-reference.adoc:1360
 msgid "Minimal VM level events"
-msgstr ""
+msgstr "最小限のVMレベルのイベント"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/native-reference.adoc:1361
 msgid "No old object sampling"
-msgstr ""
+msgstr "oldオブジェクトのサンプリングはありません"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/native-reference.adoc:1362
 msgid "No stacktrace tracing"
-msgstr ""
+msgstr "スタックトレースのトレースがありません"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/native-reference.adoc:1363
@@ -2052,7 +2052,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/native-reference.adoc:1366
 msgid "To use JFR add the application property: `-Dquarkus.native.enable-vm-inspection=true`.  E.g."
-msgstr ""
+msgstr "JFRを使用するには、アプリケーションのプロパティ `-Dquarkus.native.enable-vm-inspection=true` を追加します。例:"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/native-reference.adoc:1372
@@ -2066,7 +2066,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/native-reference.adoc:1375
 msgid "Once the image is compiled, enable and start JFR via runtime flags: `-XX:+FlightRecorder` and `-XX:StartFlightRecording`. For example:"
-msgstr ""
+msgstr "イメージのコンパイルが完了したら、ランタイムフラグ `-XX:+FlightRecorder` と `-XX:StartFlightRecording` を使ってJFRを有効にし、起動します。例えば、以下のようになります。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/native-reference.adoc:1381
@@ -2080,4 +2080,4 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/native-reference.adoc:1383
 msgid "For more details on using JFR, see https://www.graalvm.org/reference-manual/native-image/JFR[here]."
-msgstr ""
+msgstr "JFRの利用方法については link:https://www.graalvm.org/reference-manual/native-image/JFR[こちら]をご覧ください。"
