--- a/l10n/po/ja_JP/_versions/2.2/guides/mutiny-primer.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.2/guides/mutiny-primer.adoc.po
@@ -28,13 +28,13 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:12
 msgid "https://smallrye.io/smallrye-mutiny[Mutiny] is an intuitive, reactive programming library.  It is the primary model to write reactive applications with Quarkus."
-msgstr ""
+msgstr "link:https://smallrye.io/smallrye-mutiny[Mutiny]は、直感的なリアクティブプログラミングライブラリです。Mutinyは、Quarkusでリアクティブアプリケーションを書くための主要なモデルです。"
 
 #. type: Title ==
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:13
 #, no-wrap
 msgid "An event-driven reactive programming API"
-msgstr ""
+msgstr "イベントドリブンなリアクティブプログラミングAPI"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:19
@@ -44,7 +44,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:21
 msgid "Mutiny offers two types that are both event-driven and lazy:"
-msgstr ""
+msgstr "Mutinyには、2つ型を提供します。両方ともイベントドリブンであり、レイジーです。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:25
@@ -70,7 +70,7 @@ msgstr ""
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:37
 #, no-wrap
 msgid "Mutiny in Quarkus"
-msgstr ""
+msgstr "クォークスでのMutiny"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:41
@@ -91,7 +91,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:49
 msgid "Seasoned reactive developers may wonder why Quarkus introduced yet another reactive programming APIs while there are existing ones.  Mutiny is taking a very different angle:"
-msgstr ""
+msgstr "熟練したリアクティブ開発者は、既存のリアクティブプログラミングAPIがあるにもかかわらず、Quarkusがまた新たなリアクティブプログラミングAPIを導入したことを不思議に思うかもしれません。しかし、Mutinyはまったく異なる角度からアプローチしています。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:54
@@ -101,7 +101,7 @@ msgid ""
 "Mutiny places events at the core of its design.\n"
 "With Mutiny, you observe events, react to them, and create elegant and readable processing pipelines.\n"
 "A Ph.D. in functional programming is not required.\n"
-msgstr ""
+msgstr "**イベントドリブン** - Mutinyはイベントを設計の中核に据えています。Mutinyでは、イベントを観測し、それに反応し、エレガントで読みやすい処理パイプラインを作成します。関数型プログラミングの博士号は必要ありません。\n"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:57
@@ -109,7 +109,7 @@ msgstr ""
 msgid ""
 "**Navigable** - Even with intelligent code completion, classes with hundreds of methods are confusing.\n"
 "Mutiny provides a navigable and explicit API driving you towards the operator you need.\n"
-msgstr ""
+msgstr "**Navigable** - インテリジェントなコード補完機能があっても、何百ものメソッドを持つクラスは混乱します。Mutinyは、必要な演算子に向かってあなたを導く、ナビゲーブルで明示的なAPIを提供します。\n"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:60
@@ -117,13 +117,13 @@ msgstr ""
 msgid ""
 "**Non-Blocking I/O** - Mutiny is the perfect companion to tame the asynchronous nature of applications with non-blocking I/O (which powers xref:quarkus-reactive-architecture.adoc[Quarkus]).\n"
 "Declaratively compose operations, transform data, enforce progress, recover from failures, and more.\n"
-msgstr ""
+msgstr "**ノンブロッキングI/O** - Mutinyは、ノンブロッキングI/O（ link:quarkus-reactive-architecture.html[Quarkus]の動力源）を備えたアプリケーションの非同期性を制御するための完璧なコンパニオンです。宣言的にオペレーションを構成し、データを変換し、進行を強制し、障害から回復するなどの機能があります。\n"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:62
 #, no-wrap
 msgid "**Made for an asynchronous world** - Mutiny can be used in any asynchronous application such as event-driven microservices, message-based applications, network utilities, data stream processing, and of course... reactive applications!\n"
-msgstr ""
+msgstr "**非同期の世界のために作られた** - Mutinyは、イベントドリブンなマイクロサービス、メッセージベースのアプリケーション、ネットワークユーティリティ、データストリーム処理、そしてもちろんリアクティブなアプリケーションなど、あらゆる非同期アプリケーションで使用することができます。\n"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:65
@@ -142,7 +142,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:72
 msgid "Quarkus is powered by a xref:quarkus-reactive-architecture.adoc#engine[reactive engine], and when developing a reactive application, your code is executed on one of the few I/O threads.  Remember, you must never block these threads, and the model would collapse if you do.  So, you can't use blocking I/O.  Instead, you need to schedule the I/O operation and pass a continuation."
-msgstr ""
+msgstr "Quarkusは link:quarkus-reactive-architecture.html#engine[リアクティブエンジン]を搭載しており、リアクティブアプリケーションを開発する際には、数少ないI/Oスレッドの1つでコードが実行されます。覚えておいてほしいのは、これらのスレッドを絶対にブロックしてはいけないということで、ブロックしてしまうとモデルが崩壊してしまいます。つまり、ブロッキングI/Oは使えないのです。代わりに、I/O操作をスケジュールして、継続を渡す必要があります。"
 
 #. type: Named 'alt' AttributeList argument for macro 'image'
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:73
@@ -165,7 +165,7 @@ msgstr ""
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:80
 #, no-wrap
 msgid "Mutiny through Examples"
-msgstr ""
+msgstr "事例で見るMutiny"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:83
@@ -433,71 +433,71 @@ msgstr ""
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:241
 #, no-wrap
 msgid "Events and Actions"
-msgstr ""
+msgstr "イベント、アクション"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:244
 msgid "The following tables list the events that you can receive for Uni and Multi. Each of them is associated with its own group (onX). The second table lists the classic action you can do upon an event. Note that some groups offer more possibilities."
-msgstr ""
+msgstr "以下の表は、UniとMultiで受信できるイベントの一覧です。それぞれのイベントは、独自のグループ（onX）に関連付けられています。2つ目の表は、イベントを受けてできる古典的なアクションの一覧です。グループによってはより多くの可能性があることに注意してください。"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:248
 #, no-wrap
 msgid "Events from the upstream"
-msgstr ""
+msgstr "上流からのイベント"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:250
 #, no-wrap
 msgid "Events from the downstream"
-msgstr ""
+msgstr "下流からのイベント"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:251
 #, no-wrap
 msgid "Uni"
-msgstr ""
+msgstr "Uni"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:252
 #, no-wrap
 msgid "Subscription (1), Item (0..1), failure (0..1)"
-msgstr ""
+msgstr "Subscription (1), Item (0..1), failure (0..1)"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:254
 #, no-wrap
 msgid "Cancellation"
-msgstr ""
+msgstr "Cancellation"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:255
 #, no-wrap
 msgid "Multi"
-msgstr ""
+msgstr "Multi"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:256
 #, no-wrap
 msgid "Subscription (1), Item (0..n), failure (0..1), completion (0..1)"
-msgstr ""
+msgstr "Subscription (1), Item (0..n), failure (0..1), completion (0..1)"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:257
 #, no-wrap
 msgid "Cancellation, Request"
-msgstr ""
+msgstr "Cancellation, Request"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:260
 msgid "Check the full list of events on https://smallrye.io/smallrye-mutiny/getting-started/observing-events[the event documentation]."
-msgstr ""
+msgstr "イベントの全リストは、 link:https://smallrye.io/smallrye-mutiny/getting-started/observing-events[イベントドキュメント]で確認してください。"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:262
 #, no-wrap
 msgid "Action"
-msgstr ""
+msgstr "アクション"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:262
@@ -509,19 +509,19 @@ msgstr ""
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:264
 #, no-wrap
 msgid "Comment"
-msgstr ""
+msgstr "コメント"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:264
 #, no-wrap
 msgid "transform"
-msgstr ""
+msgstr "transform"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:264
 #, no-wrap
 msgid "`onItem().transform(Function<I, O> function);`"
-msgstr ""
+msgstr "`onItem().transform(Function<I, O&amp;gt; function);`"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:266
@@ -535,13 +535,13 @@ msgstr ""
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:266
 #, no-wrap
 msgid "transformToUni"
-msgstr ""
+msgstr "transformToUni"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:266
 #, no-wrap
 msgid "`onItem().transformToUni(Function<I, Uni<O>> function);`"
-msgstr ""
+msgstr "`onItem().transformToUni(Function<I, Uni<O&amp;gt;&amp;gt; function);`"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:267
@@ -553,13 +553,13 @@ msgstr ""
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:267
 #, no-wrap
 msgid "invoke"
-msgstr ""
+msgstr "invoke"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:267
 #, no-wrap
 msgid "`onItem().invoke(Consumer<I> consumer)`"
-msgstr ""
+msgstr "`onItem().invoke(Consumer<I&amp;gt; consumer)`"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:268
@@ -571,13 +571,13 @@ msgstr ""
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:268
 #, no-wrap
 msgid "call"
-msgstr ""
+msgstr "call"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:268
 #, no-wrap
 msgid "`onItem().call(Function<I, Uni<?>>)`"
-msgstr ""
+msgstr "`onItem().call(Function<I, Uni<?&amp;gt;&amp;gt;)`"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:269
@@ -589,19 +589,19 @@ msgstr ""
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:269
 #, no-wrap
 msgid "fail"
-msgstr ""
+msgstr "fail"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:269
 #, no-wrap
 msgid "`onItem().failWith(Function<I, Throwable>)`"
-msgstr ""
+msgstr "`onItem().failWith(Function<I, Throwable&amp;gt;)`"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:270
 #, no-wrap
 msgid "Emits a failure when it receives the event."
-msgstr ""
+msgstr "イベントを受信したときに失敗を出力します。"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:270
@@ -613,7 +613,7 @@ msgstr ""
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:270
 #, no-wrap
 msgid "`onItem().complete()`"
-msgstr ""
+msgstr "`onItem().complete()`"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:271
@@ -625,17 +625,17 @@ msgstr ""
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:273
 #, no-wrap
 msgid "Other patterns"
-msgstr ""
+msgstr "その他のパターン"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:277
 msgid "Mutiny provides lots of other features.  Head over to the https://smallrye.io/smallrye-mutiny[Mutiny documentation] to see many more examples, including the whole list of events and how to handle them."
-msgstr ""
+msgstr "Mutinyには他にもたくさんの機能があります。Mutinyの link:https://smallrye.io/smallrye-mutiny[ドキュメント]では、イベントの全リストとその処理方法など、さらに多くの例を見ることができます。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:279
 msgid "Some frequently asked guides are the following:"
-msgstr ""
+msgstr "よくある質問として、以下のようなガイドがあります。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:281
@@ -656,7 +656,7 @@ msgstr ""
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:284
 #, no-wrap
 msgid "Shortcuts"
-msgstr ""
+msgstr "ショートカット"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:288
@@ -667,120 +667,120 @@ msgstr ""
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:291
 #, no-wrap
 msgid "Shortcut"
-msgstr ""
+msgstr "ショートカット"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:293
 #, no-wrap
 msgid "Equivalent"
-msgstr ""
+msgstr "等価表現"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:293
 #, no-wrap
 msgid "uni.map(x → y)"
-msgstr ""
+msgstr "uni.map(x → y)"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:294
 #, no-wrap
 msgid "uni.onItem().transform(x → y)"
-msgstr ""
+msgstr "uni.onItem().transform(x → y)"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:294
 #, no-wrap
 msgid "uni.flatMap(x → uni2)"
-msgstr ""
+msgstr "uni.flatMap(x → uni2)"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:295
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:296
 #, no-wrap
 msgid "uni.onItem().transformToUni(x → uni2)"
-msgstr ""
+msgstr "uni.onItem().transformToUni(x → uni2)"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:295
 #, no-wrap
 msgid "uni.chain(x → uni2)"
-msgstr ""
+msgstr "uni.chain(x → uni2)"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:296
 #, no-wrap
 msgid "uni.then(() → uni2)"
-msgstr ""
+msgstr "uni.then(() → uni2)"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:297
 #, no-wrap
 msgid "uni.onItem().transformToUni(ignored → uni2)"
-msgstr ""
+msgstr "uni.onItem().transformToUni(ignored → uni2)"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:297
 #, no-wrap
 msgid "uni.invoke(x → System.out.println(x))"
-msgstr ""
+msgstr "uni.invoke(x → System.out.println(x))"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:298
 #, no-wrap
 msgid "uni.onItem().invoke(x → System.out.println(x))"
-msgstr ""
+msgstr "uni.onItem().invoke(x → System.out.println(x))"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:298
 #, no-wrap
 msgid "uni.call(x → uni2)"
-msgstr ""
+msgstr "uni.call(x → uni2)"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:299
 #, no-wrap
 msgid "uni.onItem().call(x → uni2)"
-msgstr ""
+msgstr "uni.onItem().call(x → uni2)"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:299
 #, no-wrap
 msgid "uni.eventually) → System.out.println(\"eventually\""
-msgstr ""
+msgstr "uni.eventually) → System.out.println(\"eventually\""
 
 #. type: Table
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:300
 #, no-wrap
 msgid "uni.onItemOrFailure().invokeignoredItem, ignoredException) → System.out.println(\"eventually\""
-msgstr ""
+msgstr "uni.onItemOrFailure().invokeignoredItem, ignoredException) → System.out.println(\"eventually\""
 
 #. type: Table
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:300
 #, no-wrap
 msgid "uni.eventually(() → uni2)"
-msgstr ""
+msgstr "uni.eventually(() → uni2)"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:301
 #, no-wrap
 msgid "uni.onItemOrFailure().call((ignoredItem, ignoredException) → uni2)"
-msgstr ""
+msgstr "uni.onItemOrFailure().call((ignoredItem, ignoredException) → uni2)"
 
 #. type: Title ==
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:303
 #, no-wrap
 msgid "Reactive Streams"
-msgstr ""
+msgstr "Reactive Streams"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:311
 msgid "Mutiny uses https://www.reactive-streams.org/[Reactive Streams].  `Multi` implements `Publisher` and enforces the back-pressure protocol.  Emissions are constrained by the request emitted from the downstream subscribers.  Thus, it does not overload the subscribers.  Note that in some cases, you can’t follow this protocol (because the Multi emits events that can’t be controlled, such as time, or measures sensors).  In this case, Mutiny provides a way to control the overflow using `onOverflow()`."
-msgstr ""
+msgstr "Mutinyは link:https://www.reactive-streams.org/[Reactive Streams]を使用しています。 `Multi` は `Publisher` を実装し、back-pressureプロトコルを実施しています。エミッションは、下流のサブスクライバから発せられるリクエストによって制約されます。したがって、サブスクライバーに過負荷をかけることはありません。なお、場合によっては、このプロトコルに従えないこともあります（Multiが時間や測定センサーなどの制御できないイベントを放出するため）。この場合、Mutinyは、 `onOverflow()` を使ってオーバーフローを制御する方法を提供します。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:314
 msgid "`Uni` does not implement Reactive Streams `Publisher`.  A `Uni` can only emit one event, so subscribing to the `Uni` is enough to express your intent to use the result and does not need the request protocol ceremony."
-msgstr ""
+msgstr "`Uni` は、Reactive Streams `Publisher` を実装していません。 `Uni` は1つのイベントしか発することができないので、 `Uni` をサブスクライブすることで、結果を使用する意思を表明することができ、リクエストプロトコルのセレモニーは必要ありません。"
 
 #. type: Title ==
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:315
@@ -791,17 +791,17 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:320
 msgid "Vert.x is a toolkit to build reactive applications and systems.  It provides a huge ecosystem of libraries following the reactive principles (i.e., non-blocking and asynchronous).  Vert.x is an essential part of Quarkus, as it provides its reactive capabilities."
-msgstr ""
+msgstr "Vert.xは、リアクティブなアプリケーションやシステムを構築するためのツールキットです。Vert.xは、リアクティブな原則（ノンブロッキングおよび非同期）に従ったライブラリの巨大なエコシステムを提供します。Vert.xは、リアクティブ機能を提供するため、Quarkusの重要な部分となっています。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:323
 msgid "In addition, the whole Vert.x API can be used with Quarkus.  To provide a cohesive experience, the Vert.x API is also available using a Mutiny variant, i.e., returns Uni and Multi."
-msgstr ""
+msgstr "さらに、Vert.x API全体をQuarkusで使用することができます。まとまりのある体験を提供するために、Vert.x APIはMutinyのバリアントを使用して、つまりUniとMultiを返すこともできます。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:325
 msgid "More details about this API can be found on: https://quarkus.io/blog/mutiny-vertx/."
-msgstr ""
+msgstr "このAPIの詳細については、 https://quarkus.io/blog/mutiny-vertx/  を参照してください。"
 
 #. type: Title ==
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:326
@@ -812,29 +812,29 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:330
 msgid "The integration of Mutiny in Quarkus goes beyond just the library.  Mutiny exposes hooks that allow Quarkus and Mutiny to be closely integrated:"
-msgstr ""
+msgstr "QuarkusにおけるMutinyのインテグレーションは、単なるライブラリにとどまりません。Mutinyは、QuarkusとMutinyを密接に統合するためのフックを公開しています。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:332
 msgid "Calling `await` or `toIterable` would fail if you are running on an I/O thread, preventing blocking the I/O thread;"
-msgstr ""
+msgstr "I/O スレッドで実行している場合は `await` や `toIterable` を呼び出すと失敗し、I/O スレッドのブロックを防ぎます。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:333
 msgid "The `log()` operator use the Quarkus logger;"
-msgstr ""
+msgstr "`log()` オペレーターは、Quarkus のロガーを使用しています。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:334
 msgid "The default Mutiny thread pool is the Quarkus worker thread pool;"
-msgstr ""
+msgstr "Mutinyのデフォルトのスレッドプールは、Quarkusのワーカースレッドプールです。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:335
 msgid "Context Propagation is enabled by default when using Mutiny Uni and Multi"
-msgstr ""
+msgstr "Mutiny UniおよびMultiを使用する場合、Context伝搬はデフォルトで有効です。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mutiny-primer.adoc:337
 msgid "More details about the infrastructure integration can be found on https://smallrye.io/smallrye-mutiny/guides/infrastructure."
-msgstr ""
+msgstr "インフラ統合の詳細については、 https://smallrye.io/smallrye-mutiny/guides/infrastructure を参照してください。"
