--- a/l10n/po/ja_JP/_versions/main/guides/capabilities.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/capabilities.adoc.po
@@ -23,12 +23,12 @@ msgstr ""
 #: upstream/_versions/main/guides/capabilities.adoc:6
 #, no-wrap
 msgid "Extension Capabilities"
-msgstr ""
+msgstr "エクステンションケイパビリティ"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/capabilities.adoc:11
 msgid "Quarkus extensions may declare in their descriptors (`META-INF/quarkus-extension.properties` found in the runtime extension JAR artifact) that they provide certain capabilities. A capability represents a technical aspect, e.g. an implementation of some functionality or a specification. Each capability has a name which should follow the Java package naming convention, e.g. `io.quarkus.rest`."
-msgstr ""
+msgstr "Quarkusのエクステンションは、その記述子（ランタイムエクステンションのJARアーティファクトにある `META-INF/quarkus-extension.properties` ）の中で、特定の能力を提供することを宣言することができます。ケイパビリティは技術的な側面を表しており、例えばある機能の実装や仕様などです。各ケイパビリティには名前がついており、Javaパッケージの命名規則に従うべきです（例： `io.quarkus.rest` ）。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/capabilities.adoc:13
