--- a/l10n/po/ja_JP/_versions/main/guides/container-image.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/container-image.adoc.po
@@ -48,7 +48,7 @@ msgstr "<<#s2i,S2I>>"
 #. type: Plain text
 #: upstream/_versions/main/guides/container-image.adoc:16
 msgid "<<#buildpack,Buildpack>>"
-msgstr ""
+msgstr "<<#buildpack,Buildpack>>"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/container-image.adoc:17
@@ -176,17 +176,17 @@ msgstr "S2I のビルドでは、`BuildConfig` と 2 つの `ImageStream` リソ
 #: upstream/_versions/main/guides/container-image.adoc:97
 #, no-wrap
 msgid "Buildpack"
-msgstr ""
+msgstr "Buildpack"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/container-image.adoc:102
 msgid "The extension `quarkus-container-image-buildpack` is using buildpacks in order to perform container image builds.  Under the hood buildpacks will use a Docker daemon for the actual build.  While buildpacks support alternatives to Docker, this extension will only work with Docker."
-msgstr ""
+msgstr "`quarkus-container-image-buildpack` は、コンテナイメージのビルドを行うために buildpacks を使用しています。buildpacksは、実際のビルドにDockerデーモンを使用します。buildpacksはDockerの代替品をサポートしていますが、このエクステンションはDockerでのみ動作します。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/container-image.adoc:104
 msgid "Additionally, the user will have to configure which build image to use (no default image is provided). For example:"
-msgstr ""
+msgstr "さらに、ユーザーはどのビルドイメージを使用するかを設定する必要があります（デフォルトのイメージは提供されていません）。例えば、以下のようになります。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/container-image.adoc:108
@@ -197,7 +197,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/container-image.adoc:111
 msgid "or for native:"
-msgstr ""
+msgstr "またはネイティブの場合、"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/container-image.adoc:115
@@ -219,7 +219,7 @@ msgstr "プロジェクト用のコンテナーイメージを作成するには
 #. type: Plain text
 #: upstream/_versions/main/guides/container-image.adoc:131
 msgid "If you ever want to build a native container image and already have an existing native image you can set `-Dquarkus.native.reuse-existing=true` and the native image build will not be re-run."
-msgstr ""
+msgstr "ネイティブコンテナイメージをビルドしたいときに、すでに既存のネイティブイメージがある場合は、 `-Dquarkus.native.reuse-existing=true` を設定すれば、ネイティブイメージのビルドは再実行されません。"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/container-image.adoc:132
@@ -246,7 +246,7 @@ msgstr "複数のエクステンションから選択する"
 #. type: Plain text
 #: upstream/_versions/main/guides/container-image.adoc:145
 msgid "It does not make sense to use multiple extension as part of the same build. When multiple container image extensions are present, an error will be raised to inform the user. The user can either remove the unneeded extensions or select one using `application.properties`."
-msgstr ""
+msgstr "複数のエクステンションを同じビルドの一部として使用することは意味がありません。複数のコンテナイメージエクステンションが存在する場合は、エラーが発生してユーザーに通知されます。ユーザーは、不要なエクステンションを削除するか、 `application.properties` を使用してエクステンションを選択することができます。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/container-image.adoc:147
@@ -301,7 +301,7 @@ msgstr "quarkus.container-image.image=${CI_REGISTRY_IMAGE}\n"
 #. type: Plain text
 #: upstream/_versions/main/guides/container-image.adoc:176
 msgid "See xref:config.adoc#combine-property-env-var[this] for more information on how to combine properties with environment variables."
-msgstr ""
+msgstr "プロパティと環境変数を組み合わせる方法については、 link:config.html#combine-property-env-var[こちら]をご覧ください。"
 
 #. type: Title ===
 #: upstream/_versions/main/guides/container-image.adoc:177
