--- a/l10n/po/ja_JP/_versions/main/guides/context-propagation.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/context-propagation.adoc.po
@@ -34,7 +34,7 @@ msgid ""
 "passing them as parameters everywhere. Many Quarkus extensions require those contextual objects to operate\n"
 "properly: xref:rest-json.adoc[RESTEasy], xref:cdi-reference.adoc[ArC] and xref:transaction.adoc[Transaction]\n"
 "for example.\n"
-msgstr ""
+msgstr "従来のブロッキングコードでは  link:https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/lang/ThreadLocal.html[`ThreadLocal`]変数を使用してコンテキストオブジェクトを格納し、パラメータとして渡すことを避けていました。多くのQuarkusのエクステンションは、適切に動作するためにこれらのコンテキストオブジェクトを必要とします。例えば、 link:rest-json.html[RESTEasy]、 link:cdi-reference.html[ArC]、 link:transaction.html[Transaction]などです。\n"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/context-propagation.adoc:20
@@ -65,7 +65,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #. type: Plain text
 #: upstream/_versions/main/guides/context-propagation.adoc:34
 msgid "The solution is located in the `context-propagation-quickstart` {quickstarts-tree-url}/context-propagation-quickstart[directory]."
-msgstr ""
+msgstr "このソリューションは `context-propagation-quickstart` {quickstarts-tree-url}/context-propagation-quickstart[directory]にあります。"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/context-propagation.adoc:35
@@ -141,7 +141,7 @@ msgstr "Mutiny"
 #. type: delimited block =
 #: upstream/_versions/main/guides/context-propagation.adoc:75
 msgid "This section uses Mutiny reactive types.  If you are not familiar with Mutiny, check xref:mutiny-primer.adoc[Mutiny - an intuitive reactive programming library]."
-msgstr ""
+msgstr "このセクションでは、Mutinyのリアクティブ型を使用しています。もしMutinyに慣れていない場合は、まず xref:mutiny-primer.adoc[Mutiny - 直感的なリアクティブプログラミングライブラリ] を参照してください。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/context-propagation.adoc:80
@@ -255,29 +255,29 @@ msgstr "注入された `ManagedExecutor` は、Quarkus のスレッドプール
 #: upstream/_versions/main/guides/context-propagation.adoc:163
 #, no-wrap
 msgid "Overriding which contexts are propagated"
-msgstr ""
+msgstr "どのコンテキストが伝搬されるかをオーバーライドする"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/context-propagation.adoc:166
 msgid "By default, all available contexts are propagated. However, you can override this behaviour in several ways."
-msgstr ""
+msgstr "デフォルトでは、利用可能なすべてのコンテキストが伝搬されます。しかし、この動作をいくつかの方法で上書きすることができます。"
 
 #. type: Title ===
 #: upstream/_versions/main/guides/context-propagation.adoc:167
 #, no-wrap
 msgid "Using configuration"
-msgstr ""
+msgstr "設定の使用"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/context-propagation.adoc:170
 msgid "The following configuration properties allow you to specify the default sets of propagated contexts:"
-msgstr ""
+msgstr "以下の設定プロパティでは、伝搬されるコンテキストのデフォルトセットを指定できます。"
 
 #. type: Table
 #: upstream/_versions/main/guides/context-propagation.adoc:173
 #, no-wrap
 msgid "Configuration Key"
-msgstr ""
+msgstr "設定キー"
 
 #. type: Table
 #: upstream/_versions/main/guides/context-propagation.adoc:173
@@ -296,13 +296,13 @@ msgstr "デフォルト値"
 #: upstream/_versions/main/guides/context-propagation.adoc:176
 #, no-wrap
 msgid "`mp.context.ThreadContext.propagated`"
-msgstr ""
+msgstr "`mp.context.ThreadContext.propagated`"
 
 #. type: Table
 #: upstream/_versions/main/guides/context-propagation.adoc:177
 #, no-wrap
 msgid "The comma-separated set of propagated contexts"
-msgstr ""
+msgstr "伝播されたコンテクストのコンマで区切られたセット"
 
 #. type: Table
 #: upstream/_versions/main/guides/context-propagation.adoc:179
@@ -314,7 +314,7 @@ msgstr ""
 #: upstream/_versions/main/guides/context-propagation.adoc:180
 #, no-wrap
 msgid "`mp.context.ThreadContext.cleared`"
-msgstr ""
+msgstr "`mp.context.ThreadContext.cleared`"
 
 #. type: Table
 #: upstream/_versions/main/guides/context-propagation.adoc:181
@@ -332,7 +332,7 @@ msgstr ""
 #: upstream/_versions/main/guides/context-propagation.adoc:184
 #, no-wrap
 msgid "`mp.context.ThreadContext.unchanged`"
-msgstr ""
+msgstr "`mp.context.ThreadContext.unchanged`"
 
 #. type: Table
 #: upstream/_versions/main/guides/context-propagation.adoc:185
@@ -344,7 +344,7 @@ msgstr ""
 #: upstream/_versions/main/guides/context-propagation.adoc:186
 #, no-wrap
 msgid "`None` (no context)"
-msgstr ""
+msgstr "`None` （コンテキストなし）"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/context-propagation.adoc:190
@@ -367,7 +367,7 @@ msgstr ""
 #: upstream/_versions/main/guides/context-propagation.adoc:196
 #, no-wrap
 msgid "`None`"
-msgstr ""
+msgstr "`None`"
 
 #. type: Table
 #: upstream/_versions/main/guides/context-propagation.adoc:197
@@ -385,7 +385,7 @@ msgstr ""
 #: upstream/_versions/main/guides/context-propagation.adoc:200
 #, no-wrap
 msgid "`Remaining`"
-msgstr ""
+msgstr "`Remaining`"
 
 #. type: Table
 #: upstream/_versions/main/guides/context-propagation.adoc:201
@@ -397,19 +397,19 @@ msgstr ""
 #: upstream/_versions/main/guides/context-propagation.adoc:203
 #, no-wrap
 msgid "All the contexts that are not explicitly listed in other sets"
-msgstr ""
+msgstr "他のセットに明示されていないすべてのコンテクスト"
 
 #. type: Table
 #: upstream/_versions/main/guides/context-propagation.adoc:204
 #, no-wrap
 msgid "`Transaction`"
-msgstr ""
+msgstr "`Transaction`"
 
 #. type: Table
 #: upstream/_versions/main/guides/context-propagation.adoc:205
 #, no-wrap
 msgid "https://javadoc.io/static/org.eclipse.microprofile.context-propagation/microprofile-context-propagation-api/1.2/org/eclipse/microprofile/context/ThreadContext.html#TRANSACTION[`ThreadContext.TRANSACTION`]"
-msgstr ""
+msgstr "https://javadoc.io/static/org.eclipse.microprofile.context-propagation/microprofile-context-propagation-api/1.2/org/eclipse/microprofile/context/ThreadContext.html#TRANSACTION[`ThreadContext.TRANSACTION`]"
 
 #. type: Table
 #: upstream/_versions/main/guides/context-propagation.adoc:207
@@ -433,13 +433,13 @@ msgstr ""
 #: upstream/_versions/main/guides/context-propagation.adoc:211
 #, no-wrap
 msgid "The CDI (ArC) context"
-msgstr ""
+msgstr "CDI(ArC)のコンテキスト"
 
 #. type: Table
 #: upstream/_versions/main/guides/context-propagation.adoc:212
 #, no-wrap
 msgid "`Servlet`"
-msgstr ""
+msgstr "`Servlet`"
 
 #. type: Table
 #: upstream/_versions/main/guides/context-propagation.adoc:213
@@ -452,7 +452,7 @@ msgstr ""
 #: upstream/_versions/main/guides/context-propagation.adoc:215
 #, no-wrap
 msgid "The servlet context"
-msgstr ""
+msgstr "サーブレットコンテキスト"
 
 #. type: Table
 #: upstream/_versions/main/guides/context-propagation.adoc:216
@@ -470,19 +470,19 @@ msgstr ""
 #: upstream/_versions/main/guides/context-propagation.adoc:220
 #, no-wrap
 msgid "`Application`"
-msgstr ""
+msgstr "`Application`"
 
 #. type: Table
 #: upstream/_versions/main/guides/context-propagation.adoc:221
 #, no-wrap
 msgid "https://javadoc.io/static/org.eclipse.microprofile.context-propagation/microprofile-context-propagation-api/1.2/org/eclipse/microprofile/context/ThreadContext.html#APPLICATION[`ThreadContext.APPLICATION`]"
-msgstr ""
+msgstr "https://javadoc.io/static/org.eclipse.microprofile.context-propagation/microprofile-context-propagation-api/1.2/org/eclipse/microprofile/context/ThreadContext.html#APPLICATION[`ThreadContext.APPLICATION`]"
 
 #. type: Table
 #: upstream/_versions/main/guides/context-propagation.adoc:222
 #, no-wrap
 msgid "The current `ThreadContextClassLoader`"
-msgstr ""
+msgstr "現在の `ThreadContextClassLoader`"
 
 #. type: Title ===
 #: upstream/_versions/main/guides/context-propagation.adoc:224
