Add some translations

--- a/l10n/po/ja_JP/_guides/security-testing.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-testing.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2022-02-04 01:50+0900\n"
-"PO-Revision-Date: 2022-02-03 16:30+0900\n"
+"PO-Revision-Date: 2022-02-05 10:52+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -21,9 +21,9 @@ msgstr ""
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/security-testing.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Security Testing"
-msgstr "セキュリティーエクステンションのテスト"
+msgstr "セキュリティのテスト"
 
 #. type: Plain text
 #: upstream/_guides/security-testing.adoc:11
@@ -38,15 +38,13 @@ msgstr "ユーザー情報の設定"
 
 #. type: Plain text
 #: upstream/_guides/security-testing.adoc:16
-#, fuzzy
 msgid "You can use xref:security-properties.adoc[quarkus-elytron-security-properties-file] for testing security. This supports both embedding user info in `application.properties` and standalone properties files."
-msgstr "セキュリティのテストには link:security-properties.html[quarkus-elytron-security-properties-file]が使えます。これは、 `application.properties` にユーザー情報を埋め込むことと、スタンドアロンのプロパティファイルの両方をサポートしています。"
+msgstr "セキュリティのテストには xref:security-properties.adoc[quarkus-elytron-security-properties-file] が使えます。これは、 `application.properties` にユーザー情報を埋め込むことと、スタンドアロンのプロパティファイルの両方をサポートしています。"
 
 #. type: Plain text
 #: upstream/_guides/security-testing.adoc:18
-#, fuzzy
 msgid "For example, the following configuration will allow for configuring the users in both the production where OAuth2 is required and development modes using xref:config.adoc#configuration-profiles[Configuration Profiles]."
-msgstr "例えば、以下の構成では、 link:config.html#configuration-profiles[Configuration Profiles]を使って、OAuth2が必要な本番モードと開発モードの両方でユーザーを設定することができます。"
+msgstr "例えば、以下の設定では、 link:config.html#configuration-profiles[Configuration Profiles]を使って、OAuth2が必要な本番モードと開発モードの両方でユーザーを設定することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/security-testing.adoc:28
