--- a/l10n/po/ja_JP/_guides/funqy-azure-functions-http.adoc.po
+++ b/l10n/po/ja_JP/_guides/funqy-azure-functions-http.adoc.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2022-02-04 01:50+0900\n"
-"PO-Revision-Date: 2021-11-22 22:04+0900\n"
+"PO-Revision-Date: 2022-02-05 10:46+0900\n"
 "Last-Translator: Nobuhiro Sue <nobuhiro.sue@gmail.com>\n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 3.0\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
@@ -27,18 +27,15 @@ msgstr "Azure Functions と Funqy HTTP バインディング"
 
 #. type: Plain text
 #: upstream/_guides/funqy-azure-functions-http.adoc:13
-#, fuzzy
 msgid "You can use xref:funqy-http.adoc[Funqy HTTP] on Azure Functions.  This allows you to invoke on multiple Funqy functions using HTTP deployed as one Azure Function."
 msgstr "Azure Functionsで link:funqy-http.html[Funqy HTTP]を使うことができます。これにより、1つのAzure FunctionとしてデプロイされたHTTPを使って、複数のFunqy関数を呼び出すことができます。"
 
 #. type: Plain text
 #: upstream/_guides/funqy-azure-functions-http.adoc:19
-#, fuzzy
 msgid "The Funqy HTTP + Azure Functions binding is not a replacement for REST over HTTP.  Because Funqy needs to be portable cross a lot of different protocols and function providers its HTTP binding is very minimalistic and you will lose REST features like linking and the ability to leverage HTTP features like cache-control and conditional GETs.  You may want to consider using Quarkus's JAX-RS, Spring MVC, or Vert.x Web Reactive Route xref:azure-functions-http.adoc[support] instead.  They also work with Quarkus and Azure Functions."
-msgstr "FunqyのHTTP + Azure Functionsバインディングは、HTTP上のRESTの代替ではありません。Funqyは多くの異なるプロトコルや関数プロバイダに移植する必要があるため、そのHTTPバインディングは非常にミニマムであり、リンクのようなREST機能や、キャッシュコントロールや条件付きGETのようなHTTP機能を活用する能力は失われます。代わりに、QuarkusのJAX-RS、Spring MVC、またはVert.x Web Reactive Route link:azure-functions-http.html[のサポート]を使用することを検討するとよいでしょう。これらは、QuarkusとAzure Functionsでも動作します。"
+msgstr "FunqyのHTTP + Azure Functionsバインディングは、HTTP上のRESTの代替ではありません。Funqyは多くの異なるプロトコルや関数プロバイダに移植する必要があるため、そのHTTPバインディングは非常にミニマムであり、リンクのようなREST機能や、キャッシュコントロールや条件付きGETのようなHTTP機能を活用する能力は失われます。代わりに、QuarkusのJAX-RS、Spring MVC、またはVert.x Web Reactive Route の link:azure-functions-http.html[サポート]を使用することを検討するとよいでしょう。これらは、QuarkusとAzure Functionsでも動作します。"
 
 #. type: Plain text
 #: upstream/_guides/funqy-azure-functions-http.adoc:25
-#, fuzzy
 msgid "Follow the xref:azure-functions-http.adoc[Azure Functions HTTP Guide].  It walks through using a variety of HTTP frameworks on Azure Functions.  Including Funqy."
-msgstr "link:azure-functions-http.html[Azure Functions HTTP Guide]』に従ってください。このガイドでは、Azure FunctionsでさまざまなHTTPフレームワークを使用する方法を説明しています。Funqyも含まれています。"
+msgstr "xref:azure-functions-http.adoc[Azure Functions HTTP Guide] に従ってください。このガイドでは、Azure FunctionsでさまざまなHTTPフレームワークを使用する方法を説明しています。Funqyも含まれています。"
