--- a/l10n/po/ja_JP/_guides/rest-data-panache.adoc.po
+++ b/l10n/po/ja_JP/_guides/rest-data-panache.adoc.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2022-02-04 01:49+0900\n"
-"PO-Revision-Date: 2021-11-26 13:04+0900\n"
+"PO-Revision-Date: 2022-02-05 10:49+0900\n"
 "Last-Translator: Nobuhiro Sue <nobuhiro.sue@gmail.com>\n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 3.0\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
@@ -98,9 +98,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/rest-data-panache.adoc:55
-#, fuzzy
 msgid "Implement the Panache entities and/or repositories as explained in the xref:hibernate-orm-panache.adoc[Hibernate ORM with Panache guide]."
-msgstr "link:hibernate-orm-panache.html[Hibernate ORM with Panacheガイド]で説明されているように、Panacheエンティティやリポジトリを実装します。"
+msgstr "xref:hibernate-orm-panache.adoc[Hibernate ORM with Panacheガイド]で説明されているように、Panacheエンティティやリポジトリを実装します。"
 
 #. type: Plain text
 #: upstream/_guides/rest-data-panache.adoc:56
@@ -158,9 +157,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/rest-data-panache.adoc:94
-#, fuzzy
 msgid "Implement the Panache entities and/or repositories as explained in the xref:mongodb-panache.adoc[MongoDB with Panache guide]."
-msgstr "link:mongodb-panache.html[MongoDB with Panacheガイド]で説明されているように、Panacheエンティティやリポジトリを実装します。"
+msgstr "xref:mongodb-panache.adoc[MongoDB with Panacheガイド]で説明されているように、Panacheエンティティやリポジトリを実装します。"
 
 #. type: Title ==
 #: upstream/_guides/rest-data-panache.adoc:96
