Apply translation memory

--- a/l10n/po/ja_JP/_generated-config/2.2/config/quarkus-core.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/2.2/config/quarkus-core.adoc.po
@@ -1604,7 +1604,7 @@ msgstr ""
 #: upstream/_generated-config/2.2/config/quarkus-core.adoc:858
 #, no-wrap
 msgid "`io.quarkus.platform`"
-msgstr ""
+msgstr "`io.quarkus.platform`"
 
 #. type: Table
 #: upstream/_generated-config/2.2/config/quarkus-core.adoc:863
@@ -1622,7 +1622,7 @@ msgstr ""
 #: upstream/_generated-config/2.2/config/quarkus-core.adoc:867
 #, no-wrap
 msgid "`quarkus-bom`"
-msgstr ""
+msgstr "`quarkus-bom`"
 
 #. type: Table
 #: upstream/_generated-config/2.2/config/quarkus-core.adoc:872
