--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-all-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-all-config.adoc.po
@@ -33310,7 +33310,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-all-config.adoc:21325
 #, no-wrap
 msgid "`io.quarkus.platform`"
-msgstr ""
+msgstr "`io.quarkus.platform`"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-all-config.adoc:21330
@@ -33328,7 +33328,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-all-config.adoc:21334
 #, no-wrap
 msgid "`quarkus-bom`"
-msgstr ""
+msgstr "`quarkus-bom`"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-all-config.adoc:21339
