--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-core.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-core.adoc.po
@@ -1712,7 +1712,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-core.adoc:923
 #, no-wrap
 msgid "`io.quarkus.platform`"
-msgstr ""
+msgstr "`io.quarkus.platform`"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-core.adoc:928
@@ -1730,7 +1730,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-core.adoc:932
 #, no-wrap
 msgid "`quarkus-bom`"
-msgstr ""
+msgstr "`quarkus-bom`"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-core.adoc:937
