--- a/l10n/po/ja_JP/_versions/main/guides/config-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/config-reference.adoc.po
@@ -1011,7 +1011,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/config-reference.adoc:507
 msgid "Quarkus itself is configured via the same mechanism as your application. Quarkus reserves the `quarkus.` namespace for its own configuration. For example to configure the HTTP server port you can set `quarkus.http.port` in `application.properties`. All the Quarkus configuration properties are xref:all-config.adoc[documented and searchable]."
-msgstr ""
+msgstr "Quarkus自体は、アプリケーションと同じメカニズムで設定されます。Quarkusは、自身の設定のために `quarkus.` 名前空間を予約します。例えば、HTTPサーバーポートを設定するには、 `quarkus.http.port` を `application.properties` に設定します。Quarkusのすべての設定プロパティは link:all-config.html[文書化されており、検索可能]です。"
 
 #. type: delimited block =
 #: upstream/_versions/main/guides/config-reference.adoc:512
