--- a/l10n/po/ja_JP/_versions/main/guides/rest-data-panache.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/rest-data-panache.adoc.po
@@ -99,7 +99,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/rest-data-panache.adoc:55
 msgid "Implement the Panache entities and/or repositories as explained in the xref:hibernate-orm-panache.adoc[Hibernate ORM with Panache guide]."
-msgstr ""
+msgstr "xref:hibernate-orm-panache.adoc[Hibernate ORM with Panacheガイド]で説明されているように、Panacheエンティティやリポジトリを実装します。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/rest-data-panache.adoc:56
@@ -158,7 +158,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/rest-data-panache.adoc:94
 msgid "Implement the Panache entities and/or repositories as explained in the xref:mongodb-panache.adoc[MongoDB with Panache guide]."
-msgstr ""
+msgstr "xref:mongodb-panache.adoc[MongoDB with Panacheガイド]で説明されているように、Panacheエンティティやリポジトリを実装します。"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/rest-data-panache.adoc:96
