--- a/l10n/po/ja_JP/_generated-config/2.2/config/quarkus-all-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/2.2/config/quarkus-all-config.adoc.po
@@ -39428,7 +39428,7 @@ msgstr ""
 #: upstream/_generated-config/2.2/config/quarkus-all-config.adoc:25550
 #, no-wrap
 msgid "`io.quarkus.platform`"
-msgstr ""
+msgstr "`io.quarkus.platform`"
 
 #. type: Table
 #: upstream/_generated-config/2.2/config/quarkus-all-config.adoc:25555
@@ -39446,7 +39446,7 @@ msgstr ""
 #: upstream/_generated-config/2.2/config/quarkus-all-config.adoc:25559
 #, no-wrap
 msgid "`quarkus-bom`"
-msgstr ""
+msgstr "`quarkus-bom`"
 
 #. type: Table
 #: upstream/_generated-config/2.2/config/quarkus-all-config.adoc:25564
