--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-all-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-all-config.adoc.po
@@ -33372,7 +33372,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:21368
 #, no-wrap
 msgid "`io.quarkus.platform`"
-msgstr ""
+msgstr "`io.quarkus.platform`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:21373
@@ -33390,7 +33390,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:21377
 #, no-wrap
 msgid "`quarkus-bom`"
-msgstr ""
+msgstr "`quarkus-bom`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:21382
