--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-core.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-core.adoc.po
@@ -1730,7 +1730,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-core.adoc:932
 #, no-wrap
 msgid "`io.quarkus.platform`"
-msgstr ""
+msgstr "`io.quarkus.platform`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-core.adoc:937
@@ -1748,7 +1748,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-core.adoc:941
 #, no-wrap
 msgid "`quarkus-bom`"
-msgstr ""
+msgstr "`quarkus-bom`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-core.adoc:946
