Update .po files

--- a/l10n/po/ja_JP/_includes/events-worldtour-band.html.po
+++ b/l10n/po/ja_JP/_includes/events-worldtour-band.html.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-12-03 01:46+0000\n"
+"POT-Creation-Date: 2022-02-07 19:14+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -19,17 +19,17 @@ msgstr ""
 #. type: Content of: <div><div><div><h2>
 #: upstream/_includes/events-worldtour-band.html:7
 #, fuzzy
-msgid "Quarkus World Tour 2021"
+msgid "Quarkus World Tour 2022"
 msgstr "クオークスワールドツアー2021"
 
 #. type: Content of: <div><div><div><p>
 #: upstream/_includes/events-worldtour-band.html:8
 #, fuzzy
-msgid "A virtual tour of Java User Groups creating a unique hands-on experience with access to Quarkus experts designed to help you get started with Java in a Kubernetes world."
+msgid "A virtual (and in person where possible) tour of Java User Groups creating a unique hands-on experience with access to Quarkus experts designed to help you get started with Java in a Kubernetes world."
 msgstr "Java User Groupsのバーチャルツアーでは、Kubernetesの世界でJavaを使い始めるのに役立つように設計されたQuarkusの専門家にアクセスできるユニークなハンズオン体験を作成しています。"
 
 #. type: Content of: <div><div><div><p>
 #: upstream/_includes/events-worldtour-band.html:9
 #, fuzzy
-msgid "<a href=\"/worldtour/\">Learn more about our World Tour stops</a>."
+msgid "<a href=\"{{site.baseurl}}/worldtour/\">Learn more about the Quarkus World Tour</a>"
 msgstr "&lt;a href=\"/worldtour/\"&gt;ワールドツアーの詳細についてはこちら&lt;/a&gt;。"
