--- a/l10n/po/ja_JP/worldtour_abstracts-2021.md.po
+++ b/l10n/po/ja_JP/worldtour_abstracts-2021.md.po
@@ -3,33 +3,33 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
+#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: \n"
+"Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: 2022-02-07 19:13+0000\n"
-"PO-Revision-Date: 2021-12-03 21:21+0900\n"
-"Last-Translator: \n"
-"Language-Team: \n"
-"Language: ja_JP\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 3.0\n"
 
 #. type: YAML Front Matter: layout
-#: upstream/worldtour.md:1
+#: upstream/worldtour_abstracts-2021.md:1
 #, no-wrap
-msgid "worldtour-2022"
+msgid "worldtourabstracts-2021"
 msgstr ""
 
 #. type: YAML Front Matter: permalink
-#: upstream/worldtour.md:1
+#: upstream/worldtour_abstracts-2021.md:1
 #, no-wrap
-msgid "/worldtour/"
+msgid "/worldtour/2021/abstracts"
 msgstr ""
 
 #. type: YAML Front Matter: title
-#: upstream/worldtour.md:1
+#: upstream/worldtour_abstracts-2021.md:1
 #, no-wrap
-msgid "World Tour"
-msgstr "ワールドツアー"
+msgid "World Tour 2021 - Abstracts and Support materials."
+msgstr ""
