Add machine translation

--- a/l10n/po/ja_JP/_includes/homepage-worldtour-band.html.po
+++ b/l10n/po/ja_JP/_includes/homepage-worldtour-band.html.po
@@ -18,27 +18,27 @@ msgstr ""
 
 #. type: Content of: <div><div><div><a>
 #: upstream/_includes/homepage-worldtour-band.html:4
+#, fuzzy
 msgid "<a href=\"/worldtour/\">"
-msgstr ""
+msgstr "&lt;a href=\"/worldtour/\"&gt;"
 
 #. type: Content of: <div><div><div><h2>
 #: upstream/_includes/homepage-worldtour-band.html:7
 #, fuzzy
-#| msgid "Quarkus World Tour 2021"
 msgid "Quarkus World Tour 2022"
 msgstr "Quarkus World Tour 2021"
 
 #. type: Content of: <div><div><div><p>
 #: upstream/_includes/homepage-worldtour-band.html:8
 #, fuzzy
-#| msgid "A virtual tour of Java User Groups creating a unique hands-on experience with access to Quarkus experts designed to help you get started with Java in a Kubernetes world."
 msgid "A virtual (and in person where possible) tour of Java User Groups creating a unique hands-on experience with access to Quarkus experts designed to help you get started with Java in a Kubernetes world."
 msgstr "Java User Groupsのバーチャルツアーでは、Kubernetesの世界でJavaを使い始めるのに役立つように設計され、Quarkusのエキスパートにアクセスできるユニークなハンズオン体験を用意しています。"
 
 #. type: Content of: <div><div><div><p>
 #: upstream/_includes/homepage-worldtour-band.html:9
+#, fuzzy
 msgid "<a href=\"{{site.baseurl}}/worldtour/\">Learn more about the Quarkus World Tour</a>"
-msgstr ""
+msgstr "&lt;a href=\"{{site.baseurl}}/worldtour/\"&gt;Quarkus World Tourについて詳しく知る&lt;/a&gt;。"
 
 #~ msgid "<a href=\"/worldtour/\">World Tour stop schedule and information</a>"
 #~ msgstr "<a href=\"/worldtour/\">ワールドツアー開催スケジュールと情報</a>"
