--- a/l10n/po/ja_JP/_posts/2022-02-04-quarkusworldtour-2022.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-02-04-quarkusworldtour-2022.adoc.po
@@ -18,13 +18,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2022-02-04-quarkusworldtour-2022.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-04-quarkusworldtour-2022.adoc:8
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus World Tour 2022 - The Road Never Ends'\n"
@@ -34,6 +34,13 @@ msgid ""
 "author: jcobb\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: クォークス・ワールド・ツアー2022 ～道は終わらない～」を開催しました。\n"
+"date: 2022-02-04\n"
+"tags: event\n"
+"synopsis: Quarkus World Tour of Java User Groupsは、2022年も継続されます。\n"
+"author: jcobb\n"
+"---\n"
 
 #. type: Target for macro image
 #: upstream/_posts/2022-02-04-quarkusworldtour-2022.adoc:11
@@ -43,73 +50,84 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_posts/2022-02-04-quarkusworldtour-2022.adoc:13
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "For true rock stars, the road never ends. "
-msgstr ""
+msgstr "真のロックスターにとって、道に終わりはありません。"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-04-quarkusworldtour-2022.adoc:16
+#, fuzzy
 msgid "We’re bringing the band back on the road to continue bringing our unique, hands-on experience with access to Quarkus experts designed to help you get started with Java in a Kubernetes world. Whether you are a Quarkus first-timer or seasoned pro, your JUG will love this show."
-msgstr ""
+msgstr "このバンドをツアーに戻し、Kubernetesの世界でJavaを使い始めるのに役立つように設計されたQuarkusの専門家にアクセスして、独自のハンズオン体験を引き続き提供します。Quarkusが初めての方でも、経験豊富なプロの方でも、あなたのJUGはこのショーを気に入るでしょう。"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-04-quarkusworldtour-2022.adoc:18
+#, fuzzy
 msgid "We’ll be playing some classics as well as some songs from the new releases(s)."
-msgstr ""
+msgstr "古典的な曲や新作からの曲も演奏する予定です。"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-04-quarkusworldtour-2022.adoc:20
+#, fuzzy
 msgid "Join us (virtually or live) as we tour Java User Groups across the globe for 90 minutes of technical discussion, some hands-on coding and a lively Q&A tailored to each JUG’s interests."
-msgstr ""
+msgstr "世界各地のJavaユーザーグループを訪問し、90分間の技術的なディスカッション、いくつかのハンズオンコーディング、各JUGの関心事に合わせた活発なQ&amp;Aを行います（バーチャルまたはライブ）。"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-04-quarkusworldtour-2022.adoc:22
+#, fuzzy
 msgid "We are taking requests… if you had a tour stop before, we can create a new experience to give your JUG a fresh deeper look at Quarkus. No Freebird or Stairway to Heaven. ;)"
-msgstr ""
+msgstr "リクエストを受け付けています...以前にツアーに参加したことがある方は、JUGの皆さんにQuarkusをより深く新鮮に感じてもらうために、新しい体験をすることができます。FreebirdやStairway to Heavenはありません。）"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-04-quarkusworldtour-2022.adoc:24
+#, fuzzy
 msgid "Are we visiting a JUG near you? Then look out for their announcements or if not, get them to reach out to us and we’ll see if we can squeeze them in!"
-msgstr ""
+msgstr "あなたの近くのJUGを訪問しますか？もしそうでなければ、私たちに連絡を取ってください。"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-04-quarkusworldtour-2022.adoc:26
+#, fuzzy
 msgid "And yeah, we still have cool concert shirts and swag."
-msgstr ""
+msgstr "また、クールなコンサートシャツやスワッグも用意しています。"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-04-quarkusworldtour-2022.adoc:28
+#, fuzzy
 msgid "Keep rocking the Java world!"
-msgstr ""
+msgstr "これからもJavaの世界を揺らし続けてください"
 
 #. type: Title ===
 #: upstream/_posts/2022-02-04-quarkusworldtour-2022.adoc:29
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Want a tour stop at your JUG?"
-msgstr ""
+msgstr "あなたのJUGでツアーストップをしませんか？"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-04-quarkusworldtour-2022.adoc:31
+#, fuzzy
 msgid "Interested in having the Quarkus Tour come through your local Java User Group? Contact us today to get more details and make it happen."
-msgstr ""
+msgstr "地元のJavaユーザーグループでQuarkus Tourを開催することに興味がありますか？詳細をお知りになりたい方は、今すぐお問い合わせください。"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-04-quarkusworldtour-2022.adoc:33
+#, fuzzy
 msgid "https://github.com/quarkusio/quarkus/discussions/23453[Sign up for a tour stop!]"
-msgstr ""
+msgstr "link:https://github.com/quarkusio/quarkus/discussions/23453[ツアーストップに登録しよう]"
 
 #. type: Title ===
 #: upstream/_posts/2022-02-04-quarkusworldtour-2022.adoc:34
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Want to help present?"
-msgstr ""
+msgstr "プレゼンのお手伝いをしてみませんか？"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-04-quarkusworldtour-2022.adoc:36
+#, fuzzy
 msgid "Do you have Quarkus skills and want to join the band? Want to help present the shows? Become a Roadie and join the tour."
-msgstr ""
+msgstr "Quarkusのスキルを持っていて、バンドに参加したいと思いますか？ショーの演出を手伝いたいですか？ローディーになってツアーに参加しましょう。"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-04-quarkusworldtour-2022.adoc:38
+#, fuzzy
 msgid "https://github.com/quarkusio/quarkus/discussions/23454[Become a Roadie!]"
-msgstr ""
+msgstr "link:https://github.com/quarkusio/quarkus/discussions/23454[ローディーになろう]"
