Apply translation memory

--- a/l10n/po/ja_JP/_versions/main/guides/opentracing.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/opentracing.adoc.po
@@ -106,7 +106,7 @@ msgstr "これにより、 `pom.xml` に以下が追加されます。"
 #: upstream/_versions/main/guides/opentracing.adoc:298
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/opentracing.adoc:57
@@ -126,7 +126,7 @@ msgstr ""
 #: upstream/_versions/main/guides/opentracing.adoc:307
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/opentracing.adoc:63
