--- a/l10n/po/ja_JP/_versions/main/guides/qute.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/qute.adoc.po
@@ -74,7 +74,7 @@ msgstr ""
 #: upstream/_versions/main/guides/qute.adoc:50
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/qute.adoc:39
@@ -91,7 +91,7 @@ msgstr ""
 #: upstream/_versions/main/guides/qute.adoc:59
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/qute.adoc:45
