--- a/l10n/po/ja_JP/_versions/main/guides/reactive-routes.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/reactive-routes.adoc.po
@@ -84,7 +84,7 @@ msgstr "`pom.xml` ファイルに以下を追加します。"
 #: upstream/_versions/main/guides/reactive-routes.adoc:697
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/reactive-routes.adoc:48
@@ -101,7 +101,7 @@ msgstr ""
 #: upstream/_versions/main/guides/reactive-routes.adoc:706
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/reactive-routes.adoc:54
