--- a/l10n/po/ja_JP/_versions/main/guides/rest-client-multipart.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/rest-client-multipart.adoc.po
@@ -551,7 +551,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/rest-client-multipart.adoc:290
 msgid "As usual, the application can be packaged using:"
-msgstr ""
+msgstr "いつものように、アプリケーションは以下の方法でパッケージ化されます。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/rest-client-multipart.adoc:294
@@ -561,7 +561,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/rest-client-multipart.adoc:296
 msgid "You can also generate the native executable with:"
-msgstr ""
+msgstr "次のようにネイティブ実行可能ファイルを生成することもできます。"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/rest-client-multipart.adoc:299
