--- a/l10n/po/ja_JP/_versions/main/guides/rest-client-reactive.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/rest-client-reactive.adoc.po
@@ -105,7 +105,7 @@ msgstr "これにより、 `pom.xml` に以下が追加されます。"
 #: upstream/_versions/main/guides/rest-client-reactive.adoc:898
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/rest-client-reactive.adoc:57
@@ -122,7 +122,7 @@ msgstr ""
 #: upstream/_versions/main/guides/rest-client-reactive.adoc:908
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/rest-client-reactive.adoc:63
@@ -1389,7 +1389,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/rest-client-reactive.adoc:834
 msgid "As usual, the application can be packaged using:"
-msgstr ""
+msgstr "いつものように、アプリケーションは以下の方法でパッケージ化されます。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/rest-client-reactive.adoc:838
@@ -1399,7 +1399,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/rest-client-reactive.adoc:840
 msgid "You can also generate the native executable with:"
-msgstr ""
+msgstr "次のようにネイティブ実行可能ファイルを生成することもできます。"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/rest-client-reactive.adoc:843
