--- a/l10n/po/ja_JP/_versions/main/guides/resteasy-reactive.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/resteasy-reactive.adoc.po
@@ -67,7 +67,7 @@ msgstr ""
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:39
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:45
@@ -83,7 +83,7 @@ msgstr ""
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:48
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:51
