--- a/l10n/po/ja_JP/_versions/main/guides/quartz.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/quartz.adoc.po
@@ -130,7 +130,7 @@ msgstr "これにより、 `pom.xml` に以下が追加されます。"
 #: upstream/_versions/main/guides/quartz.adoc:62
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/quartz.adoc:68
@@ -146,7 +146,7 @@ msgstr ""
 #: upstream/_versions/main/guides/quartz.adoc:71
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/quartz.adoc:74
@@ -787,12 +787,12 @@ msgstr "`./mvnw quarkus:dev` でアプリケーションを実行します。数
 #. type: Plain text
 #: upstream/_versions/main/guides/quartz.adoc:387
 msgid "As usual, the application can be packaged using:"
-msgstr ""
+msgstr "いつものように、アプリケーションは以下の方法でパッケージ化されます。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/quartz.adoc:391
 msgid "and executed with `java -jar target/quarkus-app/quarkus-run.jar`."
-msgstr ""
+msgstr "そして次のコマンドで実行できます。 `java -jar target/quarkus-app/quarkus-run.jar`."
 
 #. type: Plain text
 #: upstream/_versions/main/guides/quartz.adoc:393
