--- a/l10n/po/ja_JP/_versions/main/guides/rest-json.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/rest-json.adoc.po
@@ -107,7 +107,7 @@ msgstr "このコマンドは、RESTEasy/JAX-RSと link:https://github.com/Faste
 #: upstream/_versions/main/guides/rest-json.adoc:502
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/rest-json.adoc:53
@@ -125,7 +125,7 @@ msgstr ""
 #: upstream/_versions/main/guides/rest-json.adoc:511
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/rest-json.adoc:59
